2011-08-29  Jakub Jelinek  <jakub@redhat.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/50207
	* class.c (finish_struct_1): Complain if the first field is
	artificial.

2011-08-30  Jason Merrill  <jason@redhat.com>

	PR c++/50089
	* semantics.c (finish_id_expression): Use
	current_nonlambda_class_type for qualified-ids.

	PR c++/50220
	* semantics.c (add_capture): Call complete_type for copy.

	PR c++/50234
	* semantics.c (cxx_eval_component_reference): Handle
	value-initialization for omitted initializers.

2011-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/50224
	* semantics.c (finish_id_expression): Mark captured variables used.

2011-08-25  Jason Merrill  <jason@redhat.com>

	PR c++/50157
	* call.c (convert_like_real): Exit early if bad and !tf_error.

2011-08-23  Jason Merrill  <jason@redhat.com>

	PR c++/50024
	* semantics.c (maybe_constant_value): Don't try to fold { }.
	* pt.c (build_non_dependent_expr): Don't wrap { }.
	* init.c (build_value_init): Allow scalar value-init in templates.

2011-08-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/46862
	* class.c (finish_struct_1): If TYPE_TRANSPARENT_AGGR is set on a type
	which doesn't have any fields, clear it and diagnose.

2011-08-16  Jason Merrill  <jason@redhat.com>

	PR c++/50086
	* pt.c (unify_pack_expansion): Correct overloaded unification
	logic.

	PR c++/50054
	* typeck2.c (cxx_incomplete_type_diagnostic): Handle
	init_list_type_node.

2011-08-12  David Li  <davidxl@google.com>

	* class.c (update_vtable_entry_for_fn): Set
	LOST_PRIMARY bit properly.

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/48993
	* semantics.c (potential_constant_expression_1) [CALL_EXPR]: Sorry
	on 'this' in a constructor.

	PR c++/49921
	* semantics.c (finish_decltype_type): Call invalid_nonstatic_memfn_p.

	PR c++/49669
	* init.c (perform_member_init): Handle invalid array initializer.

	PR c++/49988
	* semantics.c (cxx_eval_array_reference): Handle failure to