@@ -1,3 +1,8 @@
+2011-09-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/49267
+	* g++.dg/cpp0x/rv-conv1.C: New.
+
 2011-09-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/compat/struct-layout-1_test.h: Decrease bitfield size
